Fix sidebar spacing on mobile viewports.

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -220,6 +220,9 @@ blockquote {
   .full-screen-toggle {
     display: none;
   }
+  aside.sidebar {
+    margin-top: 22px;
+  }
 }
 @media (min-width: $screen-sm-min) { 
 }
